package app.main;

import app.main.controller.Controller;

public class Main {
    public static void main(String[] args) {
        Controller controller = new Controller();
    }
}

