@startuml

title __KONECRANES's Class Diagram__\n

  namespace app.main {
    class app.main.Main {
    }
  }
  

  namespace app.main {
    namespace controller {
      class app.main.controller.Controller {
      }
    }
  }
  

  namespace app.main {
    namespace controller {
      class app.main.controller.InputHandler {
      }
    }
  }
  

  namespace app.main {
    namespace controller {
      class app.main.controller.InputInterpreter {
      }
    }
  }
  

  namespace app.main {
    namespace controller {
      class app.main.controller.SimulationHandler {
      }
    }
  }
  

  namespace app.main {
    namespace model.command {
      class app.main.model.command.ChangeDirection {
      }
    }
  }
  

  namespace app.main {
    namespace model.command {
      interface app.main.model.command.Command {
      }
    }
  }
  

  namespace app.main {
    namespace model.command {
      class app.main.model.command.CreateVehicle {
      }
    }
  }
  

  namespace app.main {
    namespace model.command {
      class app.main.model.command.ExitApplication {
      }
    }
  }
  

  namespace app.main {
    namespace model.command {
      class app.main.model.command.WrongCommand {
      }
    }
  }
  

  namespace app.main {
    namespace model.vehicle {
      enum Direction {
      }
    }
  }
  

  namespace app.main {
    namespace model.vehicle {
      class app.main.model.vehicle.Position {
      }
    }
  }
  

  namespace app.main {
    namespace model.vehicle {
      class app.main.model.vehicle.Vehicle {
      }
    }
  }
  

  namespace app.main {
    namespace view {
      class app.main.view.View {
      }
    }
  }
  

  app.main.controller.Controller o-- app.main.view.View : consoleView
  app.main.controller.Controller o-- app.main.controller.InputInterpreter : inputInterpreter
  app.main.controller.InputHandler .up.|> java.lang.Runnable
  app.main.controller.InputHandler o-- app.main.controller.Controller : controller
  app.main.controller.SimulationHandler .up.|> java.lang.Runnable
  app.main.controller.SimulationHandler o-- app.main.controller.Controller : controller
  app.main.model.command.ChangeDirection .up.|> app.main.model.command.Command
  app.main.model.command.ChangeDirection o-- app.main.model.vehicle.Direction : direction
  app.main.model.command.CreateVehicle .up.|> app.main.model.command.Command
  app.main.model.command.CreateVehicle o-- app.main.model.vehicle.Direction : direction
  app.main.model.command.CreateVehicle o-- app.main.model.vehicle.Position : position
  app.main.model.command.ExitApplication .up.|> app.main.model.command.Command
  app.main.model.command.WrongCommand .up.|> app.main.model.command.Command
  app.main.model.vehicle.Vehicle o-- app.main.model.vehicle.Direction : direction
  app.main.model.vehicle.Vehicle o-- app.main.model.vehicle.Position : position


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
